# TipTranslate

./: .gitignore  CMakeLists.txt  FloatingPane.cpp  FloatingPane.h  HotkListener.cpp  HotkListener.h  LICENSE.txt  OcrWorker.cpp  OcrWorker.h  OverlaySelect.cpp  OverlaySelect.h  README.md  Translator.cpp  Translator.h  config.example.ini  listenertip.cpp  listenertip.h  listenertip.ui  main.cpp
